--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <p>Aqui você descobre os maiores babados sobre o amor,se você tem alguma fofoca entre em contato com a gente,se você é fifi como todos nós entre no nosso site e veja as fofocas.</p>
-    
+  <strong>Maria Vitória</strong>  
+<class="categorias"<p>fofocas em ação</p></class>
+<class="categorias"<p>fofocas de suspense</p></class>
+<class="categorias"<p>fofocas de terror</p></class>
+<class="categorias"<p>fofocas de comédia</p></class>
 </body>
-</html>
+</html>/
